@startuml
skinparam defaultFontName "Noto Sans CJK SC"
skinparam defaultFontSize 14
title 充电桩状态图

state "空闲" as IDLE
state "使用中" as CHARGING
state "故障" as FAULT

[*] --> IDLE : 系统初始化
IDLE --> CHARGING : 用户启动充电
CHARGING --> IDLE : 正常结束充电（扣费成功或标记欠费，释放桩）
CHARGING --> IDLE : 管理员强制结束充电
CHARGING --> FAULT : 异常中断（系统检测）
IDLE --> FAULT : 提交故障报修
FAULT --> IDLE : 报修审核通过（close）

note bottom of IDLE : 桩可用
note bottom of CHARGING : 正在充电
note bottom of FAULT : 需维修处理

note right of CHARGING : 欠费状态由 charge_records.deduction_status 跟踪\n充电桩仅维护 IDLE / CHARGING / FAULT 三种物理状态\n欠费时用户 frozenUntil 被设置，阻止再次启动充电\n用户充值补缴后自动解除冻结

note right of FAULT : 报修流程: OPEN -> IN_PROGRESS -> RESOLVED -> CLOSED\n充电桩在 CLOSED（审核通过）时恢复 IDLE\nRESOLVED（维修完成）时桩仍保持 FAULT，\n待管理员审核通过后才恢复
@enduml